--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
   <meta http-equiv="refresh"
-        content="0; url=http://nodeschool.io/hradec-kralove" />
+        content="0; url=https://twitter.com/nodeschoolcz" />
 </head>
 <html>
